<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".IndexActivity">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    tools:context=".IndexActivity"
    	android:minHeight="@dimen/main_listitem_height">
	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.12"
	        android:text="@string/main_version_android"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    <TextView
	        android:id="@+id/tv_version"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.52"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size_s"
	        android:singleLine="true"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
           <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.08"
                android:text="@string/main_version_sn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_listitem_size"
                android:contentDescription="@null"
                android:gravity="center"
                android:background="@drawable/main_list_item_bg"/>
            <TextView
                android:id="@+id/tv_sn"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_listitem_size_ss"
                android:singleLine="true"
                android:contentDescription="@null"
                android:gravity="center"
                android:background="@drawable/main_list_item_bg"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    tools:context=".IndexActivity"
    	android:minHeight="@dimen/main_listitem_height">
	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.12"
	        android:text="@string/main_version_model"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    <TextView
	        android:id="@+id/tv_model"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.14"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size_s"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    
	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.08"
	        android:text="@string/main_version_ram"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    <TextView
	        android:id="@+id/tv_ram"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.11"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size_s"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    
	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.08"
	        android:text="@string/main_version_flash"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
	    <TextView
	        android:id="@+id/tv_flash"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.112"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/main_listitem_size_s"
	        android:contentDescription="@null"
	        android:gravity="center"
	        android:background="@drawable/main_list_item_bg"/>
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.08"
                android:text="@string/main_version_mac"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_listitem_size"
                android:contentDescription="@null"
                android:gravity="center"
                android:background="@drawable/main_list_item_bg"/>
            <TextView
                android:id="@+id/tv_mac"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_listitem_size_s"
                android:contentDescription="@null"
                android:gravity="center"
                android:background="@drawable/main_list_item_bg"/>
	</LinearLayout>
</LinearLayout>
