<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgingTestActivity">
	
    <TextView
        android:id="@+id/tv_cpu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"/>
    
    <!-- CPU型号 -->
    <!--<TextView
        android:id="@+id/tv_cpu_model_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_model"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingTop="@dimen/cpu_info_padleft"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_title"
        android:layout_toRightOf="@id/tv_cpu_title"/>
    <TextView
        android:id="@+id/tv_cpu_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingTop="@dimen/cpu_info_padleft"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_alignTop="@id/tv_cpu_model_title"
        android:layout_toRightOf="@id/tv_cpu_model_title"/>
    -->
    <!-- 核心数 -->
    <!--<TextView
        android:id="@+id/tv_cpu_corenum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_core_num"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_model_title"
        android:layout_alignRight="@id/tv_cpu_model_title"/>
    -->
    <TextView
        android:id="@+id/tv_cpu_corenum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_core_num"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_title"
        android:layout_toRightOf="@id/tv_cpu_title"/>
    <TextView
        android:id="@+id/tv_cpu_corenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_alignTop="@id/tv_cpu_corenum_title"
        android:layout_toRightOf="@id/tv_cpu_corenum_title"/>
    
    <!-- 频率范围-->
    <TextView
        android:id="@+id/tv_cpu_freq_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_freq"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_corenum_title"
        android:layout_alignRight="@id/tv_cpu_corenum_title"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_cpu_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_alignTop="@id/tv_cpu_freq_title"
        android:layout_toRightOf="@id/tv_cpu_freq_title"
        android:visibility="gone"/>
    
    <!-- 当前频率-->
    <TextView
        android:id="@+id/tv_cpu_currfreq_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_curr_freq"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_freq_title"
        android:layout_alignRight="@id/tv_cpu_freq_title"/>
    <TextView
        android:id="@+id/tv_cpu_currfreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_alignTop="@id/tv_cpu_currfreq_title"
        android:layout_toRightOf="@id/tv_cpu_currfreq_title"/>
    
    <!-- CPU负载-->
    <TextView
        android:id="@+id/tv_cpu_usage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_usage"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_below="@id/tv_cpu_currfreq_title"
        android:layout_alignRight="@id/tv_cpu_currfreq_title"/>
    <TextView
        android:id="@+id/tv_cpu_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/aging_item_size"
        android:contentDescription="@null"
        android:paddingLeft="@dimen/cpu_info_padleft"
        android:layout_alignTop="@id/tv_cpu_usage_title"
        android:layout_toRightOf="@id/tv_cpu_usage_title"/>
    
</RelativeLayout>
